<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/shadow_title">

    <ImageView
        android:layout_width="173dp"
        android:layout_height="168dp"
        android:background="@drawable/logo"
        android:layout_marginBottom="100sp"/>
    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="70sp"
        android:gravity="center"
        android:background="@drawable/shadowlayer"
        android:layout_marginHorizontal="40sp"
        android:layout_marginBottom="40sp"
        >
        <TextView
            android:layout_height="165sp"
            android:layout_width="316sp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="320sp"
        android:layout_height="170sp"
        android:gravity="center"
        android:background="@drawable/shadowlayer"
        android:layout_marginHorizontal="40sp" >
    <TextView
        android:id="@+id/helloText"
        android:layout_height="165sp"
        android:layout_width="316sp"
        android:text="@string/hello"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="#000000"/>
    </LinearLayout>
    <Button
        android:id="@+id/nextButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"
        android:textSize="20sp" />
</LinearLayout>